# Football-Analysis

./: .gitignore  README.md  config.toml  main.py  pyproject.toml  requirements.txt  yolo_inference.py
camera_movement_estimator/: camera_movement_estimator.py
notebooks/team_assigning/: color_assignement.ipynb
notebooks/training/: football-training-yolo-v5.ipynb
src/football_analysis/: __init__.py  app.py  yolo_inference.py
src/football_analysis/camera_movement_estimator/: __init__.py  camera_movement_estimator.py
src/football_analysis/player_ball_assigner/: __init__.py  player_ball_assigner.py
src/football_analysis/speed_and_distance_estimator/: __init__.py  speed_and_distance_estimator.py
src/football_analysis/team_assigner/: team_assigner.py
src/football_analysis/trackers/: tracker.py
src/football_analysis/utils/: __init__.py  video_utils.py
src/football_analysis/view_transformer/: __init__.py  view_transformer.py
team_assigner/: team_assigner.py
trackers/: tracker.py
utils/: video_utils.py
