[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "football-analysis"
version = "0.1.0"
description = "Football video analysis with YOLO, OpenCV, ByteTrack, and K-Means team assignment."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Ashkan M." }
]
dependencies = [
  "ultralytics",
  "supervision",
  "opencv-python",
  "numpy",
  "pandas",
  "scikit-learn",
]

[project.optional-dependencies]
notebooks = [
  "jupyter",
  "matplotlib",
]

[project.scripts]
football-analysis = "football_analysis.app:main"
football-yolo-inference = "football_analysis.yolo_inference:main"

[tool.setuptools.packages.find]
where = ["src"]
